# zentra

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  cliff.toml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: codecov.yml  docs.yml  publish.yml
api/: README.md  index.html  pyproject.toml
api/commands/: index.html
api/commands/add-route/: index.html
api/commands/init/: index.html
api/commands/new-key/: index.html
api/lib/: index.html
api/lib/auth/: index.html
api/lib/core/: index.html
api/lib/crud/: index.html
api/lib/responses/: index.html
api/lib/schema/: index.html
api/poetry-scripts/: index.html
api/route-responses/: index.html
api/tests/: conftest.py  test_auth.py  test_config.py  test_utils.py
api/tests/cli/: test_builder.py  test_conf.py  test_constants.py  test_setup.py
api/tests/responses/: test_messages.py  test_models.py  test_root.py
api/tests/root/: test_crud.py  test_schema.py  test_validation.py
api/tutorial/: index.html
api/tutorial/authentication/: index.html
api/tutorial/create-routes/: index.html
api/tutorial/create-tables/: index.html
api/tutorial/first-steps/: index.html
api/tutorial/settings/: index.html
api/zentra_api/: crud.py  enums.py  schema.py  validation.py
api/zentra_api/auth/: enums.py  security.py  utils.py
api/zentra_api/cli/: main.py
api/zentra_api/cli/builder/: poetry.py
api/zentra_api/cli/commands/: setup.py
api/zentra_api/cli/conf/: __init__.py  checks.py  logger.py
api/zentra_api/cli/constants/: __init__.py  display.py  enums.py  message.py
api/zentra_api/cli/template/: .env.backend
api/zentra_api/cli/template/app/: config.py  main.py  models.py  run.py
api/zentra_api/cli/template/app/auth/: __init__.py  schema.py
api/zentra_api/cli/template/app/config/: env.py  settings.py
api/zentra_api/cli/template/app/db/: __init__.py  crud.py  models.py
api/zentra_api/config/: __init__.py  env.py
api/zentra_api/responses/: __init__.py  base.py  exception.py  messages.py  models.py  utils.py
api/zentra_api/utils/: package.py
builder/: tree_example.py
changelog/: index.html
ci/: changelog.py
cli/: main.py
cli/conf/: checks.py  cleanup.py  constants.py  create.py  error.py  extract.py  file_handler.py  format.py  logger.py  message.py  move.py  storage.py  types.py
cli/tasks/: generate.py  setup.py
cli/templates/: __init__.py  builder.py  details.py  extract.py  jsx.py  map.py  mappings.py  retrieval.py  storage.py  ui.py  utils.py
cli/utils/: err_panels.py  printables.py
cli/zentra_config/: __init__.py
docs/: CNAME  changelog.md  index.md
docs/api/: index.md  poetry-scripts.md
docs/components/: core.md
docs/help/: errors.md  index.md  report.md
docs/models/: index.md
docs/sdk/: index.md
docs/starting/: basic_usage.md  commands.md  errors.md  index.md  install.md  license.md  stack.md
help/: index.html
help/errors/: index.html
help/report/: index.html
init/: __init__.py
init/_demo/: user_button.py
models/: .coveragerc  README.md  index.html  pyproject.toml
models/tutorial/: index.html
nextjs-core/: Dockerfile  README.md
sdk/: index.html
sdk/commands/: index.html
sdk/tutorial/: index.html
search/: search_index.json
starting/: index.html
starting/install/: index.html
starting/license/: index.html
starting/stack/: index.html
tests/: conftest.py  test_controller.py  test_fh.py  test_setup.py  test_zentra_core.py
tests/automation/: create_tests.py
tests/cli/: test_checks.py  test_conf.py  test_constants.py  test_docker.py  test_filepaths.py  test_format.py  test_logger.py  test_main.py  test_message.py  test_setup.py  test_storage.py
tests/conf/: test_checks.py  test_cleanup.py  test_create.py  test_extract.py  test_filepaths.py  test_format.py  test_logger.py  test_move.py  test_storage.py
tests/constants/: test_filepaths.py
tests/controllers/: test_base.py  test_generate.py  test_setup.py
tests/mappings/: btn_content.py  builder.py  extractor.py  helper.py  html.py  js.py  retrieval.py  ui_attributes.py  ui_content.py  ui_imports.py  ui_simple.py  ui_vals.py
tests/templates/: details.py  dummy.py  helper.py  test_builder.py  test_retrieval.py  test_ui.py
zentra/: core.py
(+408 files in other folders)
