[tool.poetry]
name = "zentra_models"
version = "0.1.0"
description = "Use Pydantic models to create React components from popular libraries."
authors = ["Ryan Partridge <rpartridge101@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
zentra = "zentra_models.cli.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
pydantic = "^2.8"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.28"
hypothesis = "^6.102.6"
pytest-cov = "^4.1.0"
mike = "^2.0.0"
mkdocstrings = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
