[tool.poetry]
name = "zentra_api"
version = "0.1.0"
description = "A CLI tool for building FastAPI apps faster."
authors = ["Ryan Partridge <rpartridge101@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
zentra-api = "zentra_api.cli.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12"
fastapi = "^0.111"
pydantic = "^2.8.2"
responses = "^0.25.3"
toml = "^0.10.2"
poetry = "^1.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
hypothesis = "^6.105"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=zentra_api tests/"
